<resources>
    <string name="app_name">Resto Reviews</string>
    <string name="title_home">Home</string>
    <string name="this_is_bookmark_fragment">This is bookmark fragment</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="picture_content_desc">restaurant picture</string>
    <string name="find_restos">Find Restos</string>
    <string name="resto_rating">4.5</string>
    <string name="resto_name">Resto Name</string>
    <string name="resto_city">City</string>
    <string name="change_view">Change View</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="full_card">Full Card</string>
    <string name="title_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_restaurants_found">No Restaurants Found</string>
    <string name="resto_address">Jl. Kafe Enak No.23</string>

    <string name="tab_title_1">Description</string>
    <string name="tab_title_2">Menus</string>
    <string name="tab_title_3">Reviews</string>
    <string name="drink">drink</string>
    <string name="menu">Menu</string>
    <string name="food">food</string>
    <string name="btn_add_review_content_desc">Add Review</string>
    <string name="add_review">Add Review</string>
    <string name="no_review">No Review</string>
    <string name="no_review_msg">Share Your Thoughts\nAbout This Restaurant</string>
    <string name="name">Name</string>
    <string name="review">Review</string>
    <string name="submit_review">Submit</string>
    <string name="close">Close</string>
</resources>