<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">
        
        <androidx.cardview.widget.CardView
            android:id="@+id/card_picture"
            android:layout_width="80dp"
            android:layout_height="50dp"
            app:cardCornerRadius="10dp"
            android:elevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/picture_content_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/resto_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/card_picture"
            app:layout_constraintEnd_toStartOf="@id/tv_rating"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-3dp"
            android:text="@string/resto_city"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintEnd_toEndOf="@id/tv_name"
            app:layout_constraintBottom_toBottomOf="@id/card_picture"
            app:drawableStartCompat="@drawable/ic_location_16"
            app:drawableTint="@android:color/tab_indicator_text" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:text="@string/resto_rating"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/card_picture"
            app:layout_constraintBottom_toBottomOf="@id/card_picture"
            app:drawableStartCompat="@drawable/ic_rating_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>